--- a/fly-sso/src/main/resources/templates/login.html
+++ b/fly-sso/src/main/resources/templates/login.html
@@ -10,33 +10,33 @@
                     <li class="layui-this">登入</li>
                     <li><a href="reg.html">注册</a></li>
                 </ul>
-                <div class="layui-form layui-tab-content" id="LAY_ucm" style="padding: 20px 0;">
+                <div class="layui-form layui-tab-content" id="LAY_ucm" style="padding: 20px 0;" th:attr="action=@{/account/login}" th:method="POST">
                     <div class="layui-tab-item layui-show">
                         <div class="layui-form layui-form-pane">
                             <form method="post">
                                 <div class="layui-form-item">
-                                    <label for="L_email" class="layui-form-label">邮箱</label>
+                                    <label for="L_email" class="layui-form-label">账号</label>
                                     <div class="layui-input-inline">
-                                        <input type="text" id="L_email" name="email" required lay-verify="required" autocomplete="off" class="layui-input">
+                                        <input type="text" id="L_email" name="account" required lay-verify="required" autocomplete="off" class="layui-input">
                                     </div>
                                 </div>
                                 <div class="layui-form-item">
                                     <label for="L_pass" class="layui-form-label">密码</label>
                                     <div class="layui-input-inline">
-                                        <input type="password" id="L_pass" name="pass" required lay-verify="required" autocomplete="off" class="layui-input">
+                                        <input type="password" id="L_pass" name="password" required lay-verify="required" autocomplete="off" class="layui-input">
                                     </div>
                                 </div>
                                 <div class="layui-form-item">
                                     <label for="L_vercode" class="layui-form-label">人类验证</label>
                                     <div class="layui-input-inline">
-                                        <input type="text" id="L_vercode" name="vercode" required lay-verify="required" placeholder="请输入验证码" autocomplete="off" class="layui-input">
+                                        <input type="text" id="L_vercode" name="code" required lay-verify="required" placeholder="请输入验证码" autocomplete="off" class="layui-input">
                                     </div>
                                     <div class="layui-form-mid">
                                         <span style="color: #c00;">{{d.vercode}}</span>
                                     </div>
                                 </div>
                                 <div class="layui-form-item">
-                                    <button class="layui-btn" lay-filter="*" lay-submit>立即登录</button>
+                                    <button class="layui-btn" type="submit" lay-submit>立即登录</button>
                                     <span style="padding-left:20px;">
                   <a href="forget.html">忘记密码？</a>
                 </span>
