--- a/fly-sso/src/main/resources/templates/layout.html
+++ b/fly-sso/src/main/resources/templates/layout.html
@@ -11,7 +11,8 @@
 </head>
 <body>
 <div th:replace="fragments/header::header"></div>
-<div layout:fragment="content" id="content" >123456</div>
+<div layout:fragment="content" id="content" ></div>
 <div th:replace="fragments/footer::footer"></div>
+<div layout:fragment="body_script"></div>
 </body>
 </html>
