--- a/fly-web/src/main/resources/templates/fragments/header.html
+++ b/fly-web/src/main/resources/templates/fragments/header.html
@@ -26,7 +26,7 @@
                 <a class="iconfont icon-touxiang layui-hide-xs" href="../user/login.html"></a>
             </li>
             <li class="layui-nav-item">
-                <a href="../user/login.html">登入</a>
+                <a th:href="@{/account/login}">登入</a>
             </li>
             <li class="layui-nav-item">
                 <a href="../user/reg.html">注册</a>
