--- a/fly-web/src/main/resources/templates/fragments/header.html
+++ b/fly-web/src/main/resources/templates/fragments/header.html
@@ -22,24 +22,23 @@
         <ul class="layui-nav fly-nav-user">
 
             <!-- 未登入的状态 -->
-            <li class="layui-nav-item">
-                <a class="iconfont icon-touxiang layui-hide-xs" href="../user/login.html"></a>
-            </li>
-            <li class="layui-nav-item">
-                <a th:href="@{/account/login}">登入</a>
-            </li>
-            <li class="layui-nav-item">
-                <a href="../user/reg.html">注册</a>
-            </li>
-            <li class="layui-nav-item layui-hide-xs">
-                <a href="" onclick="layer.msg('正在通过QQ登入', {icon:16, shade: 0.1, time:0})" title="QQ登入" class="iconfont icon-qq"></a>
-            </li>
-            <li class="layui-nav-item layui-hide-xs">
-                <a href="" onclick="layer.msg('正在通过微博登入', {icon:16, shade: 0.1, time:0})" title="微博登入" class="iconfont icon-weibo"></a>
-            </li>
+            <!--<li class="layui-nav-item">-->
+                <!--<a class="iconfont icon-touxiang layui-hide-xs" href="../user/login.html"></a>-->
+            <!--</li>-->
+            <!--<li class="layui-nav-item">-->
+                <!--<a th:href="@{/account/login}">登入</a>-->
+            <!--</li>-->
+            <!--<li class="layui-nav-item">-->
+                <!--<a href="../user/reg.html">注册</a>-->
+            <!--</li>-->
+            <!--<li class="layui-nav-item layui-hide-xs">-->
+                <!--<a href="" onclick="layer.msg('正在通过QQ登入', {icon:16, shade: 0.1, time:0})" title="QQ登入" class="iconfont icon-qq"></a>-->
+            <!--</li>-->
+            <!--<li class="layui-nav-item layui-hide-xs">-->
+                <!--<a href="" onclick="layer.msg('正在通过微博登入', {icon:16, shade: 0.1, time:0})" title="微博登入" class="iconfont icon-weibo"></a>-->
+            <!--</li>-->
 
             <!-- 登入后的状态 -->
-            <!--
             <li class="layui-nav-item">
               <a class="fly-nav-avatar" href="javascript:;">
                 <cite class="layui-hide-xs">贤心</cite>
@@ -55,7 +54,6 @@
                 <dd><a href="/user/logout/" style="text-align: center;">退出</a></dd>
               </dl>
             </li>
-            -->
 
         </ul>
     </div>
