--- a/fly-sso/src/main/resources/templates/login.html
+++ b/fly-sso/src/main/resources/templates/login.html
@@ -26,15 +26,15 @@
                                         <input type="password" id="L_pass" name="password" required lay-verify="required" autocomplete="off" class="layui-input">
                                     </div>
                                 </div>
-                                <div class="layui-form-item">
-                                    <label for="L_vercode" class="layui-form-label">人类验证</label>
-                                    <div class="layui-input-inline">
-                                        <input type="text" id="L_vercode" name="code" required lay-verify="required" placeholder="请输入验证码" autocomplete="off" class="layui-input">
-                                    </div>
-                                    <div class="layui-form-mid">
-                                        <span style="color: #c00;">{{d.vercode}}</span>
-                                    </div>
-                                </div>
+                                <!--<div class="layui-form-item">-->
+                                    <!--<label for="L_vercode" class="layui-form-label">人类验证</label>-->
+                                    <!--<div class="layui-input-inline">-->
+                                        <!--<input type="text" id="L_vercode" name="code" required lay-verify="required" placeholder="请输入验证码" autocomplete="off" class="layui-input">-->
+                                    <!--</div>-->
+                                    <!--<div class="layui-form-mid">-->
+                                        <!--<span style="color: #c00;">{{d.vercode}}</span>-->
+                                    <!--</div>-->
+                                <!--</div>-->
                                 <div class="layui-form-item">
                                     <button class="layui-btn" type="submit" lay-submit>立即登录</button>
                                     <span style="padding-left:20px;">
