--- a/fly-web/src/main/resources/templates/fragments/header.html
+++ b/fly-web/src/main/resources/templates/fragments/header.html
@@ -19,9 +19,7 @@
             </li>
         </ul>
 
-        <ul class="layui-nav fly-nav-user">
-
-             未登入的状态
+        <ul th:if="${fly_current_user}==null" class="layui-nav fly-nav-user">
             <li class="layui-nav-item">
                 <a class="iconfont icon-touxiang layui-hide-xs" href="../user/login.html"></a>
             </li>
@@ -37,25 +35,25 @@
             <li class="layui-nav-item layui-hide-xs">
                 <a href="" onclick="layer.msg('正在通过微博登入', {icon:16, shade: 0.1, time:0})" title="微博登入" class="iconfont icon-weibo"></a>
             </li>
-
-            <!-- 登入后的状态 -->
-            <!--<li class="layui-nav-item">-->
-              <!--<a class="fly-nav-avatar" href="javascript:;">-->
-                <!--<cite class="layui-hide-xs">贤心</cite>-->
-                <!--<i class="iconfont icon-renzheng layui-hide-xs" title="认证信息：layui 作者"></i>-->
-                <!--<i class="layui-badge fly-badge-vip layui-hide-xs">VIP3</i>-->
-                <!--<img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg">-->
-              <!--</a>-->
-              <!--<dl class="layui-nav-child">-->
-                <!--<dd><a href="user/set.html"><i class="layui-icon">&#xe620;</i>基本设置</a></dd>-->
-                <!--<dd><a href="user/message.html"><i class="iconfont icon-tongzhi" style="top: 4px;"></i>我的消息</a></dd>-->
-                <!--<dd><a href="user/home.html"><i class="layui-icon" style="margin-left: 2px; font-size: 22px;">&#xe68e;</i>我的主页</a></dd>-->
-                <!--<hr style="margin: 5px 0;">-->
-                <!--<dd><a href="/user/logout/" style="text-align: center;">退出</a></dd>-->
-              <!--</dl>-->
-            <!--</li>-->
-
         </ul>
+        <ul th:if="${fly_current_user}!=null" class="layui-nav fly-nav-user">
+        <li class="layui-nav-item">
+            <a class="fly-nav-avatar" href="javascript:;">
+                <cite class="layui-hide-xs" th:text="${fly_current_user.name}"></cite>
+                <i class="iconfont icon-renzheng layui-hide-xs" title="认证信息：layui 作者"></i>
+                <i class="layui-badge fly-badge-vip layui-hide-xs"  th:text="${fly_current_user.vip}"></i>
+                <img th:src="${fly_current_user.avatar}">
+            </a>
+            <dl class="layui-nav-child">
+                <dd><a href="user/set.html"><i class="layui-icon">&#xe620;</i>基本设置</a></dd>
+                <dd><a href="user/message.html"><i class="iconfont icon-tongzhi" style="top: 4px;"></i>我的消息</a></dd>
+                <dd><a href="user/home.html"><i class="layui-icon" style="margin-left: 2px; font-size: 22px;">&#xe68e;</i>我的主页</a></dd>
+                <hr style="margin: 5px 0;">
+                <dd><a href="/user/logout/" style="text-align: center;">退出</a></dd>
+            </dl>
+        </li>
+        </ul>
+
     </div>
 </div>
 </header>
