fixed bugs and sso logout

--- a/fly-sso/src/main/resources/templates/layout.html
+++ b/fly-sso/src/main/resources/templates/layout.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.w3.org/1999/xhtml">
 <head th:fragment="htmlhead">
     <meta charset="utf-8">
-    <title>基于 layui 的极简社区页面模版</title>
+    <title>Fly 社区登录中心</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="keywords" content="fly,layui,前端社区">
     <meta name="description" content="Fly社区是模块化前端UI框架Layui的官网社区，致力于为web开发提供强劲动力">
