--- a/fly-web/src/main/resources/templates/fragments/header.html
+++ b/fly-web/src/main/resources/templates/fragments/header.html
@@ -41,7 +41,7 @@
             <a class="fly-nav-avatar" href="javascript:;">
                 <cite class="layui-hide-xs" th:text="${fly_current_user.name}"></cite>
                 <i class="iconfont icon-renzheng layui-hide-xs" title="认证信息：layui 作者"></i>
-                <i class="layui-badge fly-badge-vip layui-hide-xs"  th:text="${fly_current_user.vip}"></i>
+                <i class="layui-badge fly-badge-vip layui-hide-xs"  th:text="${fly_current_user.vipString}"></i>
                 <img th:src="${fly_current_user.avatar}">
             </a>
             <dl class="layui-nav-child">
