--- a/fly-web/src/main/resources/templates/fragments/header.html
+++ b/fly-web/src/main/resources/templates/fragments/header.html
@@ -19,7 +19,7 @@
             </li>
         </ul>
 
-        <ul th:if="${fly_current_user}==null" class="layui-nav fly-nav-user">
+        <ul th:if="${headerUser}==null" class="layui-nav fly-nav-user">
             <li class="layui-nav-item">
                 <a class="iconfont icon-touxiang layui-hide-xs" href="../user/login.html"></a>
             </li>
@@ -36,18 +36,18 @@
                 <a href="" onclick="layer.msg('正在通过微博登入', {icon:16, shade: 0.1, time:0})" title="微博登入" class="iconfont icon-weibo"></a>
             </li>
         </ul>
-        <ul th:if="${fly_current_user}!=null" class="layui-nav fly-nav-user">
+        <ul th:if="${headerUser}!=null" class="layui-nav fly-nav-user">
         <li class="layui-nav-item">
             <a class="fly-nav-avatar" href="javascript:;">
-                <cite class="layui-hide-xs" th:text="${fly_current_user.name}"></cite>
+                <cite class="layui-hide-xs" th:text="${headerUser.name}"></cite>
                 <i class="iconfont icon-renzheng layui-hide-xs" title="认证信息：layui 作者"></i>
-                <i class="layui-badge fly-badge-vip layui-hide-xs"  th:text="${fly_current_user.vipString}"></i>
-                <img th:src="${fly_current_user.avatar}">
+                <i class="layui-badge fly-badge-vip layui-hide-xs"  th:text="${headerUser.vipString}"></i>
+                <img th:src="${headerUser.avatar}">
             </a>
             <dl class="layui-nav-child">
                 <dd><a href="user/set.html"><i class="layui-icon">&#xe620;</i>基本设置</a></dd>
                 <dd><a href="user/message.html"><i class="iconfont icon-tongzhi" style="top: 4px;"></i>我的消息</a></dd>
-                <dd><a href="user/home.html"><i class="layui-icon" style="margin-left: 2px; font-size: 22px;">&#xe68e;</i>我的主页</a></dd>
+                <dd><a th:href="@{/user/home}"><i class="layui-icon" style="margin-left: 2px; font-size: 22px;">&#xe68e;</i>我的主页</a></dd>
                 <hr style="margin: 5px 0;">
                 <dd><a th:href="@{/account/logout}" style="text-align: center;">退出</a></dd>
             </dl>
