--- a/fly-web/src/main/resources/templates/fragments/footer.html
+++ b/fly-web/src/main/resources/templates/fragments/footer.html
@@ -13,7 +13,7 @@
 
     <script src="../res/layui/layui.js"></script>
     <script>
-        layui.cache.page = 'jie';
+        layui.cache.page = '';
         layui.cache.user = {
             username: '游客'
             ,uid: -1
