--- a/fly-web/src/main/resources/templates/layout.html
+++ b/fly-web/src/main/resources/templates/layout.html
@@ -13,5 +13,6 @@
 <div th:replace="fragments/header::header"></div>
 <div layout:fragment="content" id="content" >123456</div>
 <div th:replace="fragments/footer::footer"></div>
+<div layout:fragment="body_script"></div>
 </body>
 </html>
