--- a/fly-web/src/main/resources/templates/user/home.html
+++ b/fly-web/src/main/resources/templates/user/home.html
@@ -37,7 +37,7 @@
         <div class="layui-row layui-col-space15">
             <div class="layui-col-md6 fly-home-jie">
                 <div class="fly-panel">
-                    <h3 class="fly-panel-title">贤心 最近的提问</h3>
+                    <h3 class="fly-panel-title" th:text="${headerUser.name}+' 最近的提问'">最近的提问</h3>
                     <ul class="jie-row">
                         <li>
                             <span class="fly-jing">精</span>
@@ -82,7 +82,7 @@
 
             <div class="layui-col-md6 fly-home-da">
                 <div class="fly-panel">
-                    <h3 class="fly-panel-title">贤心 最近的回答</h3>
+                    <h3 class="fly-panel-title" th:text="${headerUser.name}+' 最近的回答'">最近的回答</h3>
                     <ul class="home-jieda">
                         <li>
                             <p>
