--- a/fly-web/src/main/resources/templates/fragments/footer.html
+++ b/fly-web/src/main/resources/templates/fragments/footer.html
@@ -11,7 +11,7 @@
         </p>
     </div>
 
-    <script src="../res/layui/layui.js"></script>
+    <script src="/res/layui/layui.js"></script>
     <script>
         layui.cache.page = '';
         layui.cache.user = {
@@ -23,7 +23,7 @@
         };
         layui.config({
             version: "3.0.0"
-            ,base: '../res/mods/'  //这里实际使用时，建议改成绝对路径
+            ,base: '/res/mods/'  //这里实际使用时，建议改成绝对路径
         }).extend({
             fly: 'index'
         }).use('fly');
