--- a/fly-web/src/main/resources/templates/fragments/header.html
+++ b/fly-web/src/main/resources/templates/fragments/header.html
@@ -5,7 +5,7 @@
     <div class="fly-header layui-bg-black">
     <div class="layui-container">
         <a class="fly-logo" href="/">
-            <img src="../res/images/logo.png" alt="layui">
+            <img src="/res/images/logo.png" alt="layui">
         </a>
         <ul class="layui-nav fly-nav layui-hide-xs">
             <li class="layui-nav-item layui-this">
