--- a/fly-web/src/main/resources/templates/jie/detail.html
+++ b/fly-web/src/main/resources/templates/jie/detail.html
@@ -234,15 +234,15 @@
 
                 <div class="fly-panel">
                     <div class="fly-panel-title">
-                        这里可作为广告区域
+                        山东临沂欢迎您
                     </div>
                     <div class="fly-panel-main">
-                        <a href="http://layim.layui.com/?from=fly" target="_blank" class="fly-zanzhu" time-limit="2017.09.25-2099.01.01" style="background-color: #5FB878;">LayIM 3.0 - layui 旗舰之作</a>
+                        <a href="https://github.com/fanpan26/Fly.SpringCloud" target="_blank" class="fly-zanzhu" time-limit="2017.09.25-2099.01.01" style="background-color: #5FB878;">本站源码 - Fly.SpringCloud</a>
                     </div>
                 </div>
 
                 <div class="fly-panel" style="padding: 20px 0; text-align: center;">
-                    <img src="../../res/images/weixin.jpg" style="max-width: 100%;" alt="layui">
+                    <img src="/res/images/weixin.jpg" style="max-width: 100%;" alt="layui">
                     <p style="position: relative; color: #666;">微信扫码关注 layui 公众号</p>
                 </div>
 
