--- a/fly-web/src/main/resources/templates/layout.html
+++ b/fly-web/src/main/resources/templates/layout.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="keywords" content="fly,layui,前端社区">
     <meta name="description" content="Fly社区是模块化前端UI框架Layui的官网社区，致力于为web开发提供强劲动力">
-    <link rel="stylesheet" href="../res/layui/css/layui.css">
-    <link rel="stylesheet" href="../res/css/global.css">
+    <link rel="stylesheet" href="/res/layui/css/layui.css">
+    <link rel="stylesheet" href="/res/css/global.css">
 </head>
 <body>
 <div th:replace="fragments/header::header"></div>
-<div layout:fragment="content" id="content" >123456</div>
+<div layout:fragment="content" id="content" >Fly社区</div>
 <div th:replace="fragments/footer::footer"></div>
 <div layout:fragment="body_script"></div>
 </body>
