--- a/fly-web/src/main/resources/templates/jie/detail.html
+++ b/fly-web/src/main/resources/templates/jie/detail.html
@@ -7,71 +7,48 @@
         <div class="layui-row layui-col-space15">
             <div class="layui-col-md8 content detail">
                 <div class="fly-panel detail-box">
-                    <h1>Fly Template v3.0，基于 layui 的极简社区页面模版</h1>
+                    <h1 th:text="${article.article.title}"></h1>
                     <div class="fly-detail-info">
                         <!-- <span class="layui-badge">审核中</span> -->
-                        <span class="layui-badge layui-bg-green fly-detail-column">动态</span>
+                        <span class="layui-badge layui-bg-green fly-detail-column" th:text="${article.article.category}">动态</span>
 
-                        <span class="layui-badge" style="background-color: #999;">未结</span>
-                        <!-- <span class="layui-badge" style="background-color: #5FB878;">已结</span> -->
+                        <span class="layui-badge" style="background-color: #999;" th:if="${article.article.closure==false}">未结</span>
+                        <span class="layui-badge" style="background-color: #5FB878;"th:if="${article.article.closure==true}">已结</span>
 
-                        <span class="layui-badge layui-bg-black">置顶</span>
-                        <span class="layui-badge layui-bg-red">精帖</span>
+                        <span class="layui-badge layui-bg-black" th:if="${article.article.top}">置顶</span>
+                        <span class="layui-badge layui-bg-red" th:if="${article.article.special}">精帖</span>
 
-                        <div class="fly-admin-box" data-id="123">
-                            <span class="layui-btn layui-btn-xs jie-admin" type="del">删除</span>
+                        <!--<div class="fly-admin-box" data-id="123">-->
+                            <!--<span class="layui-btn layui-btn-xs jie-admin" type="del">删除</span>-->
 
-                            <span class="layui-btn layui-btn-xs jie-admin" type="set" field="stick" rank="1">置顶</span>
-                            <!-- <span class="layui-btn layui-btn-xs jie-admin" type="set" field="stick" rank="0" style="background-color:#ccc;">取消置顶</span> -->
+                            <!--<span class="layui-btn layui-btn-xs jie-admin" type="set" field="stick" rank="1">置顶</span>-->
+                            <!--&lt;!&ndash; <span class="layui-btn layui-btn-xs jie-admin" type="set" field="stick" rank="0" style="background-color:#ccc;">取消置顶</span> &ndash;&gt;-->
 
-                            <span class="layui-btn layui-btn-xs jie-admin" type="set" field="status" rank="1">加精</span>
-                            <!-- <span class="layui-btn layui-btn-xs jie-admin" type="set" field="status" rank="0" style="background-color:#ccc;">取消加精</span> -->
-                        </div>
-                        <span class="fly-list-nums">
-            <a href="#comment"><i class="iconfont" title="回答">&#xe60c;</i> 66</a>
-            <i class="iconfont" title="人气">&#xe60b;</i> 99999
-          </span>
+                            <!--<span class="layui-btn layui-btn-xs jie-admin" type="set" field="status" rank="1">加精</span>-->
+                            <!--&lt;!&ndash; <span class="layui-btn layui-btn-xs jie-admin" type="set" field="status" rank="0" style="background-color:#ccc;">取消加精</span> &ndash;&gt;-->
+                        <!--</div>-->
+                        <span class="fly-list-nums" id="span_nums">
+                            <a href="#comment"><i class="iconfont" title="回答"></i>
+                                <cit th:text="${article.browseCount}">0</cit></a><i class="iconfont" title="人气"></i><cit th:text="${article.commentCount}">0</cit></span>
                     </div>
                     <div class="detail-about">
                         <a class="fly-avatar" href="../user/home.html">
-                            <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg" alt="贤心">
+                            <img th:src="${article.author.avatar}" th:alt="${article.author.name}">
                         </a>
                         <div class="fly-detail-user">
-                            <a href="../user/home.html" class="fly-link">
-                                <cite>贤心</cite>
-                                <i class="iconfont icon-renzheng" title="认证信息：{{ rows.user.approve }}"></i>
-                                <i class="layui-badge fly-badge-vip">VIP3</i>
+                            <a th:href="@{/user/home}" class="fly-link">
+                                <cite th:text="${article.author.name}"></cite>
+                                <i class="iconfont icon-renzheng" th:title="'认证信息： '+${article.author.authStr}"></i>
+                                <i class="layui-badge fly-badge-vip" th:text="'VIP'+${article.author.vip}"></i>
                             </a>
-                            <span>2017-11-30</span>
+                            <span th:text="${article.article.createAt}"></span>
                         </div>
                         <div class="detail-hits" id="LAY_jieAdmin" data-id="123">
-                            <span style="padding-right: 10px; color: #FF7200">悬赏：60飞吻</span>
-                            <span class="layui-btn layui-btn-xs jie-admin" type="edit"><a href="add.html">编辑此贴</a></span>
+                            <span style="padding-right: 10px; color: #FF7200" th:text="'悬赏: '+${article.article.experience}+'飞吻'"></span>
+                            <span class="layui-btn layui-btn-xs jie-admin" type="edit" th:if="${article.isAuthor}"><a href="add.html">编辑此贴</a></span>
                         </div>
                     </div>
-                    <div class="detail-body photos">
-                        <p>
-                            该模版由 layui官方社区（<a href="http://fly.layui.com/" target="_blank">fly.layui.com</a>）倾情提供，只为表明我们对 layui 执着的信念、以及对未来持续加强的承诺。该模版基于 layui 搭建而成，可作为极简通用型社区的页面支撑。
-                        </p>
-                        <p>更新日志：</p>
-                        <pre>
-# v3.0 2017-11-30
-* 采用 layui 2.2.3 作为 UI 支撑
-* 全面同步最新的 Fly 社区风格，各种细节得到大幅优化
-* 更友好的响应式适配能力
-</pre>
-
-                        下载<hr>
-                        <p>
-                            官网：<a href="http://www.layui.com/template/fly/" target="_blank">http://www.layui.com/template/fly/</a><br>
-                            码云：<a href="https://gitee.com/sentsin/fly/" target="_blank">https://gitee.com/sentsin/fly/</a><br>
-                            GitHub：<a href="https://github.com/layui/fly" target="_blank">https://github.com/layui/fly</a>
-                        </p>
-                        封面<hr>
-                        <p>
-                            <img src="../../res/images/fly.jpg" alt="Fly社区">
-                        </p>
-                    </div>
+                    <div class="detail-body photos" id="div_article_content"></div>
                 </div>
 
                 <div class="fly-panel detail-box" id="flyReply">
@@ -249,7 +226,22 @@
             </div>
         </div>
     </div>
+</div>
+<div layout:fragment="body_script">
+    <script th:inline="javascript">
+        layui.cache.page = 'jie';
 
+        function init(fly) {
+            var interval = setInterval(function () {
+                if (fly.faces) {
+                    clearInterval(interval);
+                    var article = [[${#httpServletRequest.getAttribute('article')}]];
+                    var e = document.getElementById('div_article_content');
+                    e.innerHTML = fly.content(article.article.content);
+                }
+            }, 100);
+        }
+    </script>
 </div>
 </body>
 </html>
