--- a/fly-web/src/main/resources/templates/jie/detail.html
+++ b/fly-web/src/main/resources/templates/jie/detail.html
@@ -10,7 +10,7 @@
                     <h1 th:text="${article.article.title}"></h1>
                     <div class="fly-detail-info">
                         <!-- <span class="layui-badge">审核中</span> -->
-                        <span class="layui-badge layui-bg-green fly-detail-column" th:text="${article.article.category}">动态</span>
+                        <span class="layui-badge layui-bg-green fly-detail-column" th:text="${article.article.categoryStr}"></span>
 
                         <span class="layui-badge" style="background-color: #999;" th:if="${article.article.closure==false}">未结</span>
                         <span class="layui-badge" style="background-color: #5FB878;"th:if="${article.article.closure==true}">已结</span>
@@ -18,18 +18,19 @@
                         <span class="layui-badge layui-bg-black" th:if="${article.article.top}">置顶</span>
                         <span class="layui-badge layui-bg-red" th:if="${article.article.special}">精帖</span>
 
-                        <!--<div class="fly-admin-box" data-id="123">-->
-                            <!--<span class="layui-btn layui-btn-xs jie-admin" type="del">删除</span>-->
+                        <div class="fly-admin-box">
+                            <input type="hidden" th:value="${article.article.id}"/>
+                            <span class="layui-btn layui-btn-xs jie-admin" type="del" th:if="${article.isAuthor}">删除</span>
 
                             <!--<span class="layui-btn layui-btn-xs jie-admin" type="set" field="stick" rank="1">置顶</span>-->
                             <!--&lt;!&ndash; <span class="layui-btn layui-btn-xs jie-admin" type="set" field="stick" rank="0" style="background-color:#ccc;">取消置顶</span> &ndash;&gt;-->
 
                             <!--<span class="layui-btn layui-btn-xs jie-admin" type="set" field="status" rank="1">加精</span>-->
                             <!--&lt;!&ndash; <span class="layui-btn layui-btn-xs jie-admin" type="set" field="status" rank="0" style="background-color:#ccc;">取消加精</span> &ndash;&gt;-->
-                        <!--</div>-->
+                        </div>
                         <span class="fly-list-nums" id="span_nums">
                             <a href="#comment"><i class="iconfont" title="回答"></i>
-                                <cit th:text="${article.browseCount}">0</cit></a><i class="iconfont" title="人气"></i><cit th:text="${article.commentCount}">0</cit></span>
+                                <cit th:text="${article.commentCount}">0</cit></a><i class="iconfont" title="人气"></i><cit th:text="${article.browseCount}">0</cit></span>
                     </div>
                     <div class="detail-about">
                         <a class="fly-avatar" href="../user/home.html">
@@ -41,7 +42,7 @@
                                 <i class="iconfont icon-renzheng" th:title="'认证信息： '+${article.author.authStr}"></i>
                                 <i class="layui-badge fly-badge-vip" th:text="'VIP'+${article.author.vip}"></i>
                             </a>
-                            <span th:text="${article.article.createAt}"></span>
+                            <span th:text="${article.article.createAtStr}"></span>
                         </div>
                         <div class="detail-hits" id="LAY_jieAdmin" data-id="123">
                             <span style="padding-right: 10px; color: #FF7200" th:text="'悬赏: '+${article.article.experience}+'飞吻'"></span>
