--- a/fly-web/src/main/resources/templates/jie/detail.html
+++ b/fly-web/src/main/resources/templates/jie/detail.html
@@ -121,7 +121,7 @@
                                 </div>
                             </div>
                             <div class="detail-body jieda-body photos">
-                                <p>蓝瘦那个香菇，这是一条没被采纳的回帖</p>
+                                放心肯定都会弄得，你说是不是呀//@<a href="javascript:;" class="fly-aite">岁月小偷</a> 扩展个table行右键菜单啊。<img alt="[嘻嘻]" title="[嘻嘻]" src="//img.t.sinajs.cn/t4/appstyle/expression/ext/normal/0b/tootha_thumb.gif">
                             </div>
                             <div class="jieda-reply">
               <span class="jieda-zan" type="zan">
