--- a/fly-web/src/main/resources/templates/jie/comment.html
+++ b/fly-web/src/main/resources/templates/jie/comment.html
@@ -17,7 +17,7 @@
         <span type="reply" th:if="${comment.editor==false}"><i class="iconfont icon-svgmoban53"></i>回复</span>
         <div class="jieda-admin">
             <!--<span th:if="${comment.editor}" type="edit">编辑</span>-->
-            <span th:if="${comment.author&&!comment.editor}" class="jieda-accept" type="accept">采纳</span>
+            <span th:if="${comment.mine==true} and ${comment.editor==false}" class="jieda-accept" type="accept">采纳</span>
             <!--<span type="del">删除</span>-->
         </div>
     </div>
