remove edit article btn

--- a/fly-web/src/main/resources/templates/jie/detail.html
+++ b/fly-web/src/main/resources/templates/jie/detail.html
@@ -47,7 +47,7 @@
                         </div>
                         <div class="detail-hits" id="LAY_jieAdmin" data-id="123">
                             <span style="padding-right: 10px; color: #FF7200" th:text="'悬赏: '+${article.article.experience}+'飞吻'"></span>
-                            <span class="layui-btn layui-btn-xs jie-admin" type="edit" th:if="${article.isAuthor}"><a href="add.html">编辑此贴</a></span>
+                            <!--<span class="layui-btn layui-btn-xs jie-admin" type="edit" th:if="${article.isAuthor}"><a href="add.html">编辑此贴</a></span>-->
                         </div>
                     </div>
                     <div style="display: none;" class="detail-body photos" id="div_article_content" th:text="${article.article.content}"></div>
