--- a/fly-web/src/main/resources/templates/user/home.html
+++ b/fly-web/src/main/resources/templates/user/home.html
@@ -37,45 +37,16 @@
         <div class="layui-row layui-col-space15">
             <div class="layui-col-md6 fly-home-jie">
                 <div class="fly-panel">
-                    <h3 class="fly-panel-title" th:text="${headerUser.name}+' 最近的提问'">最近的提问</h3>
+                    <h3 class="fly-panel-title" th:text="${headerUser.name}+' 最近的发布'">最近的提问</h3>
                     <ul class="jie-row">
-                        <li>
-                            <span class="fly-jing">精</span>
-                            <a href="" class="jie-title"> 基于 layui 的极简社区页面模版</a>
-                            <i>刚刚</i>
-                            <em class="layui-hide-xs">1136阅/27答</em>
+                        <li th:each="article:${recentPublishedList}" >
+                            <span class="fly-jing" th:if="${article.special}">精</span>
+                            <a href="" class="jie-title" th:text="${article.title}"> </a>
+                            <i th:text="${article.createAt}">刚刚</i>
+                            <em class="layui-hide-xs" th:text="${article.browseCount}+'阅/'+${article.commentCount}+'答'">0阅/0答</em>
                         </li>
-                        <li>
-                            <a href="" class="jie-title"> 基于 layui 的极简社区页面模版</a>
-                            <i>1天前</i>
-                            <em class="layui-hide-xs">1136阅/27答</em>
-                        </li>
-                        <li>
-                            <a href="" class="jie-title"> 基于 layui 的极简社区页面模版</a>
-                            <i>2017-10-30</i>
-                            <em class="layui-hide-xs">1136阅/27答</em>
-                        </li>
-                        <li>
-                            <a href="" class="jie-title"> 基于 layui 的极简社区页面模版</a>
-                            <i>1天前</i>
-                            <em class="layui-hide-xs">1136阅/27答</em>
-                        </li>
-                        <li>
-                            <a href="" class="jie-title"> 基于 layui 的极简社区页面模版</a>
-                            <i>1天前</i>
-                            <em class="layui-hide-xs">1136阅/27答</em>
-                        </li>
-                        <li>
-                            <a href="" class="jie-title"> 基于 layui 的极简社区页面模版</a>
-                            <i>1天前</i>
-                            <em class="layui-hide-xs">1136阅/27答</em>
-                        </li>
-                        <li>
-                            <a href="" class="jie-title"> 基于 layui 的极简社区页面模版</a>
-                            <i>1天前</i>
-                            <em class="layui-hide-xs">1136阅/27答</em>
-                        </li>
-                        <!-- <div class="fly-none" style="min-height: 50px; padding:30px 0; height:auto;"><i style="font-size:14px;">没有发表任何求解</i></div> -->
+
+                        <div  th:if="${#lists.isEmpty(recentPublishedList)}" class="fly-none" style="min-height: 50px; padding:30px 0; height:auto;"><i style="font-size:14px;">没有发表任何东西</i></div>
                     </ul>
                 </div>
             </div>
